# trace-render

./: .clang-format  .gitignore  .trace_ignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  run_tests.sh  test_trace.json
.github/workflows/: cmake-multi-platform.yml
scripts/: build.sh  build_wasm.sh  find_noisy_traces.py  format.sh  gen_trace.py  insert_trace.py  run_tests.sh
src/: INDEX.md  app.cpp  app.h  main.cpp  tracing.h
src/model/: INDEX.md  block_index.h  color_palette.h  query_db.cpp  query_db.h  trace_event.h  trace_model.cpp  trace_model.h
src/parser/: INDEX.md  trace_parser.cpp  trace_parser.h
src/platform/: INDEX.md  file_loader.h  file_loader_desktop.cpp  file_loader_wasm.cpp  memory.h  platform.h  platform_desktop.cpp  platform_wasm.cpp
src/ui/: .timeline_view.cpp.swp  INDEX.md  counter_track.cpp  counter_track.h  detail_panel.cpp  detail_panel.h  diagnostics_panel.cpp  diagnostics_panel.h  event_browser.cpp  event_browser.h  export_utils.h  filter_panel.cpp  filter_panel.h  flame_graph_panel.cpp  flame_graph_panel.h  flamegraph_panel.cpp  flamegraph_panel.h  flow_renderer.cpp  flow_renderer.h  format_time.h  instance_panel.cpp  instance_panel.h  key_bindings.cpp  key_bindings.h  query_panel.cpp  query_panel.h  range_stats.cpp  range_stats.h  search_panel.cpp  search_panel.h  sort_utils.h  source_panel.cpp  source_panel.h  stats_panel.cpp  stats_panel.h  string_utils.h  timeline_view.cpp  timeline_view.h  toolbar.cpp  toolbar.h  (+1 more)
tests/: test_block_index.cpp  test_counter_track.cpp  test_detail_siblings.cpp  test_export_utils.cpp  test_flame_graph_panel.cpp  test_flamegraph_panel.cpp  test_format_time.cpp  test_panel_reset.cpp  test_parser.cpp  test_query_db.cpp  test_search_panel.cpp  test_source_panel.cpp  test_timeline_hit_test.cpp  test_trace_event.cpp  test_trace_model.cpp  test_tracing.cpp  test_view_state.cpp
web/: shell.html
